Recebendo e enviando mensagens.

--- a/Solution/MqttGateway.Server/appsettings.json
+++ b/Solution/MqttGateway.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MqttBroker": "Server=localhost;Port=1883;CleanSession=true;"
+    "MqttBroker": "Server=mqtt-broker;Port=1883;CleanSession=true;"
   }
 }
