--- a/Solution/docker-compose.yml
+++ b/Solution/docker-compose.yml
@@ -15,3 +15,7 @@ services:
     restart: unless-stopped
     ports:
       - "1883:1883"
+    volumes:
+      - ./mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
